# philharmonic-connector-impl-llm-openai-compat

./: CHANGELOG.md  Cargo.toml  README.md
src/: client.rs  config.rs  error.rs  lib.rs  request.rs  response.rs  retry.rs  schema.rs  types.rs
src/dialect/: mod.rs  openai_native.rs  tool_call_fallback.rs  tool_call_fallback_auto.rs  vllm_native.rs
tests/: dialect_openai_native.rs  dialect_tool_call_fallback.rs  dialect_vllm_native.rs  error_cases.rs  happy_path.rs  helpers.rs  openai_smoke.rs  schema_validation.rs  stop_reason_normalization.rs  vllm_smoke.rs
tests/fixtures/: README.md  vllm_native_response.json
