[package]
name = "philharmonic-connector-impl-llm-openai-compat"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-impl-llm-openai-compat"
description = "OpenAI-compatible LLM connector implementation for Philharmonic, covering OpenAI, vLLM, and compatible gateways (llm_generate capability)."

[dependencies]
async-trait = "0.1"
jsonschema = { version = "0.46", default-features = false }
philharmonic-connector-common = "0.2"
philharmonic-connector-impl-api = "0.1"
mechanics-http-client = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "test-util"] }
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
