[package]
name = "philharmonic-connector-impl-llm-openai-compat"
version = "0.2.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-impl-llm-openai-compat"
description = "OpenAI-compatible LLM connector implementation for Philharmonic, covering OpenAI, vLLM, and compatible gateways (llm_generate capability)."

[dependencies]
async-trait = { version = "0.1", default-features = false, features = [] }
jsonschema = { version = "0.46", default-features = false, features = [] }
philharmonic-connector-common = "0.2"
philharmonic-connector-impl-api = "0.1"
mechanics-http-client = { version = "0.2", default-features = false, features = ["http3"] } # kept: preserves opportunistic HTTP/3 connector transport
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "2", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time"] }
wiremock = { version = "0.6", default-features = false, features = [] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
